# Image-Convolution-OpenCL

./: .gitignore  CMakeLists.txt
headers/: CL_event_list.h  CL_handler.h  CL_program_handler.h  err_code.h  image_reader.h  performancelogger.h
kernel/: helloworld.cl  helloworld_image.cl  image.cl
src/: CL_event_list.c  CL_handler.c  CL_program_handler.c  err_code.c  main.c  performancelogger.c
